[gd_scene load_steps=3 format=3 uid="uid://y2cuqictrejx"]

[ext_resource type="Script" path="res://scripts/UIManager.gd" id="1_usllc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3bg8n"]
bg_color = Color(0, 0, 0, 0.286275)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_usllc")
round_time = 45.0
level_number = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="TimeRemainingContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_3bg8n")

[node name="TimeRemaining" type="Label" parent="MarginContainer/TimeRemainingContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "ðŸ•‘ 0:00 "

[node name="TimeRemainingTimer" type="Timer" parent="MarginContainer/TimeRemainingContainer"]
one_shot = true

[node name="ScoreContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_3bg8n")

[node name="Score" type="Label" parent="MarginContainer/ScoreContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "ðŸ’² 0 "

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 312
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 412
theme_override_constants/margin_bottom = 128

[node name="TimeUpPanel" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TimeUpPanel"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TimeUpPanel/MarginContainer"]
layout_mode = 2

[node name="TimesUp" type="Label" parent="MarginContainer/TimeUpPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Time's Up!"

[node name="LevelNumber" type="Label" parent="MarginContainer/TimeUpPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.520233, 0.620048, 0.426173, 1)
theme_override_font_sizes/font_size = 20
text = "Level N"

[node name="Score" type="Label" parent="MarginContainer/TimeUpPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Score: X"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TimeUpPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayAgain" type="Button" parent="MarginContainer/TimeUpPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play Again"

[node name="BackToMenu" type="Button" parent="MarginContainer/TimeUpPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back to Menu"

[node name="EscMenuPanel" type="PanelContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/EscMenuPanel"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/EscMenuPanel/MarginContainer"]
layout_mode = 2

[node name="PausedText" type="Label" parent="MarginContainer/EscMenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Paused"

[node name="ResumeButton" type="Button" parent="MarginContainer/EscMenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="ExitButton" type="Button" parent="MarginContainer/EscMenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit to Menu"

[node name="LevelInfoPanel" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/LevelInfoPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/LevelInfoPanel/MarginContainer"]
layout_mode = 2

[node name="LevelNumber" type="Label" parent="MarginContainer/LevelInfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Level N"
horizontal_alignment = 1

[node name="LevelName" type="RichTextLabel" parent="MarginContainer/LevelInfoPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[color=red]Am[/color]eric[color=blue]an[/color] Rail: An Artistic Interpretation"
fit_content = true
autowrap_mode = 0
